--- a/css/login.css
+++ b/css/login.css
@@ -282,6 +282,52 @@ body.login #login form label {
   letter-spacing: 1px;
   line-height: 2;
 }
+body.login #login form#resetpassform {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+body.login #login form#resetpassform .user-pass1-wrap {
+  width: 100%;
+  max-width: 350px;
+  display: inline-block;
+}
+body.login #login form#resetpassform .user-pass1-wrap .wp-pwd {
+  opacity: 1;
+}
+body.login #login form#resetpassform .user-pass1-wrap .wp-pwd .password-input-wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+body.login #login form#resetpassform .user-pass1-wrap .wp-pwd .password-input-wrapper input {
+  display: inherit;
+  margin: 0;
+}
+body.login #login form#resetpassform .user-pass1-wrap .wp-pwd .password-input-wrapper input[type=text] {
+  display: none;
+}
+body.login #login form#resetpassform .user-pass1-wrap .wp-pwd .password-input-wrapper .button.button-secondary {
+  margin-left: 20px;
+  padding: 20px 10px;
+  border-radius: 4px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  outline: none;
+  border: none;
+  box-shadow: none;
+}
+body.login #login form#resetpassform .user-pass1-wrap .wp-pwd .password-input-wrapper.show-password input {
+  display: none;
+}
+body.login #login form#resetpassform .user-pass1-wrap .wp-pwd .password-input-wrapper.show-password input[type=text] {
+  display: block;
+}
 body.login #backtoblog,
 body.login #nav {
   font-size: 13px;
