--- a/css/aquila.css
+++ b/css/aquila.css
@@ -2491,16 +2491,17 @@ body.wp-admin .add-new-h2:active,
 body.wp-admin .page-title-action,
 .wp-core-ui .page-title-action:active,
 body.wp-admin .page-title-action:active {
-  -webkit-border-radius: 0px;
-  border-radius: 0;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
   outline: 0;
   text-transform: uppercase;
-  letter-spacing: 1px;
-  font-weight: 700;
-  line-height: 2.3;
+  letter-spacing: 0px;
+  font-weight: 500;
+  line-height: 2.1;
   border: none!important;
   box-shadow: none!important;
   text-shadow: none!important;
+  font-size: 14px;
   transition: 0.2s all linear;
   -webkit-transition: 0.2s all linear;
   -moz-transition: 0.2s all linear;
@@ -2555,10 +2556,8 @@ body.wp-admin .page-title-action.cpac-edit {
 .wp-core-ui input[type=number],
 .wp-core-ui select,
 .wp-core-ui textarea {
-  background: none;
   box-shadow: none;
-  border: none;
-  border-bottom: 2px solid transparent;
+  border-bottom: 2px solid #616161;
   transition: 0.2s all linear;
   -webkit-transition: 0.2s all linear;
   -moz-transition: 0.2s all linear;
@@ -2633,8 +2632,6 @@ body.wp-admin .page-title-action.cpac-edit {
 }
 .wp-core-ui input[type=radio],
 .wp-core-ui input[type=checkbox] {
-  background: none;
-  box-shadow: none;
   transition: 0.2s all linear;
   -webkit-transition: 0.2s all linear;
   -moz-transition: 0.2s all linear;
@@ -3027,6 +3024,14 @@ body.wp-admin #update-nag,
 body.wp-admin .update-nag {
   border: none;
   box-shadow: none;
+}
+body.wp-admin .wp-core-ui .attachment .thumbnail,
+body.wp-admin .edit-attachment-frame .attachment-media-view .details-image,
+body.wp-admin .imgedit-crop-wrap img {
+  background-color: #434343;
+  background-image: linear-gradient(45deg, #9e9e9e 25%, transparent 25%, transparent 75%, #9e9e9e 75%, #9e9e9e), linear-gradient(45deg, #9e9e9e 25%, transparent 25%, transparent 75%, #9e9e9e 75%, #9e9e9e);
+  background-position: 0 0,10px 10px;
+  background-size: 20px 20px;
 }
 #wpfooter #footer-upgrade {
   display: none;
